added more sections just in case

--- a/assets/index.html
+++ b/assets/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Mario Hernandez</h1>
+        <h1 class="double">Mario Hernandez</h1>
     </header>
     <nav>
         <ul>
@@ -18,10 +18,13 @@
             <li><a id="portfolio">Portfolio</a></li>
             <li><a>Contact</a></li>
             <li><a>Resume</a></li>
-            <!-- recall how to click on the navigation tabs and send it where it needs to go, maybe ano
+            <!-- recall how to click on the navigation tabs and send it where it needs to go, maybe another
             html link? -->
         </ul>
     </nav>
+    <section></section>
+    <section></section>
+    <section></section>
     <section>
         <h2>About me</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur p
