cleaned it up; deleted some stuff and added to css

--- a/assets/index.html
+++ b/assets/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <header>
-        <h1 class="double">Mario Hernandez</h1>
+        <h1>Mario Hernandez</h1>
     </header>
     <nav>
-        <ul>
-            <li><a id="home">Home</a></li>
-            <li><a id="portfolio">Portfolio</a></li>
-            <li><a>Contact</a></li>
-            <li><a>Resume</a></li>
+        <ul class="navbar">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Resume</a></li>
             <!-- recall how to click on the navigation tabs and send it where it needs to go, maybe another
             html link? -->
         </ul>
@@ -27,10 +27,10 @@
     <section></section>
     <section>
         <h2>About me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur p
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur p
             raesentium explicabo incidunt dolor ducimus velit eveniet est modi magni 
             amet nesciunt, perferendis et quia aperiam qui? Enim pariatur unde eum?</p>
-        <img src="" alt="image of me"/>
+        <img src="file:///Users/Hernandez/Desktop/Desktop/Team%20Enterprise/Profile%20photos/Face%20Shot.jpg" alt="image of me"/>
         <!-- insert a pitcture of you from profile photos -->
     </section>
 </body>
