deleteed and added a background image from the web

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,29 +8,30 @@
     <title>Mario's Portfolio</title>
 </head>
 <body>
-    <header>
-        <h1>Mario Hernandez</h1>
-    </header>
     <nav>
-        <ul class="navbar">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Resume</a></li>
-            <!-- recall how to click on the navigation tabs and send it where it needs to go, maybe another
-            html link? -->
-        </ul>
-    </nav>
-    <section></section>
-    <section></section>
-    <section></section>
+        <div class="topnavleft">
+          <a href="index.html"><strong>Mario Hernandez</strong></a>
+        </div>
+        <div class="topnavright">
+            <a href="#">Home |</a>
+            <a href="#">Portfolio |</a>
+            <a href="#">Contact |</a>
+            <a href="#">Resume</a>
+        </div>
+      </nav>
     <section>
         <h2>About me</h2>
+        <img src="file:///Users/Hernandez/Desktop/Desktop/Team%20Enterprise/Profile%20photos/Face%20Shot.jpg" alt="image of me"/>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur p
             raesentium explicabo incidunt dolor ducimus velit eveniet est modi magni 
-            amet nesciunt, perferendis et quia aperiam qui? Enim pariatur unde eum?</p>
-        <img src="file:///Users/Hernandez/Desktop/Desktop/Team%20Enterprise/Profile%20photos/Face%20Shot.jpg" alt="image of me"/>
-        <!-- insert a pitcture of you from profile photos -->
+            amet nesciunt, perferendis et quia aperiam qui? Enim pariatur unde eum. Lorem, ipsum dolor 
+            sit amet consectetur adipisicing elit. Reprehenderit eum tenetur praesentium placeat sed 
+            ipsam beatae, similique pariatur repellat cum temporibus porro, amet laborum aliquam consequatur 
+            iusto ullam, quaerat quod! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati 
+            iste ad, ut impedit hic nostrum id nihil. Nemo placeat, laborum mollitia quasi sit, eligendi, 
+            vitae debitis quas tempore at quidem.</p>
     </section>
 </body>
 </html>
+<!-- recall how to click on the navigation tabs and send it where it needs to go, maybe another
+            html link? -->
