created a footer, added contrast to image

--- a/assets/index.html
+++ b/assets/index.html
@@ -31,6 +31,17 @@
             iste ad, ut impedit hic nostrum id nihil. Nemo placeat, laborum mollitia quasi sit, eligendi, 
             vitae debitis quas tempore at quidem.</p>
     </section>
+    <footer>
+        <section>
+                    <!-- add linkedIn icon and GitHub -->
+        </section>
+        <section>
+            <!-- add an image or some sort of cool icon -->
+        </section>
+        <section>
+            <!-- put your name and the copyright icon -->
+        </section>
+    </footer>
 </body>
 </html>
 <!-- recall how to click on the navigation tabs and send it where it needs to go, maybe another
