added media query and thinking about footer

--- a/assets/index.html
+++ b/assets/index.html
@@ -31,17 +31,17 @@
             iste ad, ut impedit hic nostrum id nihil. Nemo placeat, laborum mollitia quasi sit, eligendi, 
             vitae debitis quas tempore at quidem.</p>
     </section>
-    <footer>
-        <section>
+    <!-- <footer> -->
+        <!-- <section> -->
                     <!-- add linkedIn icon and GitHub -->
-        </section>
-        <section>
+        <!-- </section> -->
+        <!-- <section> -->
             <!-- add an image or some sort of cool icon -->
-        </section>
-        <section>
+        <!-- </section> -->
+        <!-- <section> -->
             <!-- put your name and the copyright icon -->
-        </section>
-    </footer>
+        <!-- </section> -->
+    <!-- </footer> -->
 </body>
 </html>
 <!-- recall how to click on the navigation tabs and send it where it needs to go, maybe another
