added a background and image

--- a/assets/index.html
+++ b/assets/index.html
@@ -24,6 +24,9 @@
         </nav>
     </div>
       <!-- why didn't the clear: both style work?? -->
+      <!-- I wanted to add the image of Austin but it came out in squares
+    I also wanted to change the color of the font and make it more appealing -->
+    <!-- I wanted to try and use a background that complimented my shirt -->
     <section style="clear: both;">
         <h2>About me</h2>
         <img src="file:///Users/Hernandez/Desktop/Desktop/Team%20Enterprise/Profile%20photos/Face%20Shot.jpg" alt="image of me"/>
