added background and changed position of img

--- a/assets/index.html
+++ b/assets/index.html
@@ -27,17 +27,20 @@
       <!-- I wanted to add the image of Austin but it came out in squares
     I also wanted to change the color of the font and make it more appealing -->
     <!-- I wanted to try and use a background that complimented my shirt -->
-    <section style="clear: both;">
-        <h2>About me</h2>
-        <img src="file:///Users/Hernandez/Desktop/Desktop/Team%20Enterprise/Profile%20photos/Face%20Shot.jpg" alt="image of me"/>
-        <h3 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur p
-            raesentium explicabo incidunt dolor ducimus velit eveniet est modi magni 
-            amet nesciunt, perferendis et quia aperiam qui? Enim pariatur unde eum. Lorem, ipsum dolor 
-            sit amet consectetur adipisicing elit. Reprehenderit eum tenetur praesentium placeat sed 
-            ipsam beatae, similique pariatur repellat cum temporibus porro, amet laborum aliquam consequatur 
-            iusto ullam, quaerat quod! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati 
-            iste ad, ut impedit hic nostrum id nihil. Nemo placeat, laborum mollitia quasi sit, eligendi, 
-            vitae debitis quas tempore at quidem.</h3>
+    <section style="clear: both;" class="container">
+        <h2 style="clear: both;">About me</h2>
+        <span class="pBackground"></span>
+            <img src="file:///Users/Hernandez/Desktop/Desktop/Team%20Enterprise/Profile%20photos/Face%20Shot.jpg" alt="image of me"/>
+            <h3 class="left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur p
+                raesentium explicabo incidunt dolor ducimus velit eveniet est modi magni 
+                amet nesciunt, perferendis et quia aperiam qui? Enim pariatur unde eum. Lorem, ipsum dolor 
+                sit amet consectetur adipisicing elit. Reprehenderit eum tenetur praesentium placeat sed 
+                ipsam beatae, similique pariatur repellat cum temporibus porro, amet laborum aliquam consequatur 
+                iusto ullam, quaerat quod! Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati 
+                iste ad, ut impedit hic nostrum id nihil. Nemo placeat, laborum mollitia quasi sit, eligendi, 
+                vitae debitis quas tempore at quidem.
+            </h3>
+        </span>
     </section>
     <!-- <footer> -->
         <!-- <section> -->
