created a div around h2

--- a/assets/index.html
+++ b/assets/index.html
@@ -28,7 +28,9 @@
     I also wanted to change the color of the font and make it more appealing -->
     <!-- I wanted to try and use a background that complimented my shirt -->
     <section style="clear: both;" class="container">
-        <h2 style="clear: both;">About me</h2>
+        <div>
+            <h2>About me</h2>
+        </div>
         <span class="pBackground"></span>
             <img src="file:///Users/Hernandez/Desktop/Desktop/Team%20Enterprise/Profile%20photos/Face%20Shot.jpg" alt="image of me"/>
             <h3 class="left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur p
