updated color and positioning

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
     <!-- BY ADDING A WRAPPER DIV AROUND THE NAVIGATION BAR I CLEARFIX AND THEN ADJUSTED THE MARGIN
     AND IT WORKED!!! -->
-        <nav style="clear: both;">
+        <nav>
             <div class="topnavleft">
             <a href="index.html"><strong>Mario Hernandez</strong></a>
             </div>
@@ -27,12 +27,12 @@
       <!-- I wanted to add the image of Austin but it came out in squares
     I also wanted to change the color of the font and make it more appealing -->
     <!-- I wanted to try and use a background that complimented my shirt -->
-    <section style="clear: both;" class="container">
-        <div>
-            <h2>About me</h2>
+    <section class="container">
+        <div class="about-me">
+            <h2>About Me</h2>
         </div>
-        <span class="pBackground"></span>
-            <img src="file:///Users/Hernandez/Desktop/Desktop/Team%20Enterprise/Profile%20photos/Face%20Shot.jpg" alt="image of me"/>
+        <div class="img-h3">
+            <img src="file:///Users/Hernandez/Desktop/Desktop/Team%20Enterprise/Profile%20photos/Face%20Shot.jpg" alt="image of me" class="left"/>
             <h3 class="left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur p
                 raesentium explicabo incidunt dolor ducimus velit eveniet est modi magni 
                 amet nesciunt, perferendis et quia aperiam qui? Enim pariatur unde eum. Lorem, ipsum dolor 
@@ -42,7 +42,7 @@
                 iste ad, ut impedit hic nostrum id nihil. Nemo placeat, laborum mollitia quasi sit, eligendi, 
                 vitae debitis quas tempore at quidem.
             </h3>
-        </span>
+        </div>
     </section>
     <!-- <footer> -->
         <!-- <section> -->
