added a footer with links

--- a/assets/index.html
+++ b/assets/index.html
@@ -15,12 +15,12 @@
             <div class="topnavleft">
             <a href="index.html"><strong>Mario Hernandez</strong></a>
             </div>
-            <div class="topnavright">
-                <a href="#">Home |</a>
-                <a href="#">Portfolio |</a>
-                <a href="#">Contact |</a>
-                <a href="#">Resume</a>
-            </div>
+            <nav class="topnavright">
+                <a id="#">Home |</a>
+                <a id="#">Portfolio |</a>
+                <a id="#">Contact |</a>
+                <a id="#">Resume</a>
+            </nav>
         </nav>
     </div>
       <!-- why didn't the clear: both style work?? -->
@@ -44,17 +44,17 @@
             </h3>
         </div>
     </section>
-    <!-- <footer> -->
-        <!-- <section> -->
-                    <!-- add linkedIn icon and GitHub -->
-        <!-- </section> -->
-        <!-- <section> -->
-            <!-- add an image or some sort of cool icon -->
-        <!-- </section> -->
-        <!-- <section> -->
-            <!-- put your name and the copyright icon -->
-        <!-- </section> -->
-    <!-- </footer> -->
+    <div class="footer-container">
+        <footer class="footer-style">
+            <div class="parent">
+                <!-- these classes were added just in case I wanted to change something but 
+                I may delete them -->
+                <div class="foot-div1"><a href="https://github.com/mariohernandezk10" target="_blank">GitHub</a></div>
+                <div class="foot-div2"><a href="https://www.linkedin.com/in/mario-hernandez-b46329116/" target="_blank">LinkedIn</a></div>
+                <div class="foot-div3"><a href="https://open.spotify.com/user/ojf91xqcba2604dcomi37ok3c?si=frQmP6PtQj2grrBC77iiiA" target="_blank">Spotify</a></div>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
 <!-- recall how to click on the navigation tabs and send it where it needs to go, maybe another
